# BSU_OS

./: .gitignore  CMakeLists.txt  Creator.h  README.md  Reporter.h  creator.cpp  main.cpp  mainTests.cpp  reporter.cpp
Colloquium/: README.md  Task.md
Lab1_Processes/: Employee.h  README.md  main.cpp
Lab2_Threads/: CMakeLists.txt  README.md  interface.cpp  interface.h  mainTest.cpp
